--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,4 @@ gpr.user=battlecodedownloadpackage
 profilerEnabled=false
 #org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk1.8.0_241.jdk/Contents/Home/
 #test
+#test2
