--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # modify this file to change project properties
-teamA=examplefuncsplayer
+teamA=team3player
 teamB=examplefuncsplayer
 maps=maptestsmall
 source=src
