--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,12 @@ jacocoTestReport {
         html.destination file("${buildDir}/jacocoHtml")
     }
 }
+test {
+    jacoco {
+        includes = ['src/team3player/']
+        excludes = ['src/*']
+    }
+}
 
 // TODO: DELETE CREDENTIALS AFTER PUBLIC RELEASE
 
@@ -336,8 +342,13 @@ task codeCoverageReport(type: JacocoReport) {
     subprojects.each {
         sourceSets it.sourceSets.main
     }
-
-
+    // excludes = [*]
+    // includes = ['src/team3player/**']
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, include: '**/team3player/**')
+        }))
+    }
     reports {
         html.enabled true
     }
@@ -345,6 +356,27 @@ task codeCoverageReport(type: JacocoReport) {
 
 codeCoverageReport.dependsOn {
     subprojects*.test
+}
+
+task testCodeCoverage(type: JacocoCoverageVerification) {
+    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
+    sourceSets sourceSets.main
+    subprojects.each {
+        sourceSets it.sourceSets.main
+    }
+    violationRules {
+        rule {
+            limit {
+                minimum = 0.1
+            }
+        }
+    }
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, include: '**/team3player/**')
+        }))
+    }
+
 }
 
 unpackClient32.onlyIf { arch32 }
