--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # modify this file to change project properties
-teamA=examplefuncsplayer
+teamA=team3player
 teamB=examplefuncsplayer
-maps=maptestsmall
+maps=Volcano,maptestsmall
 source=src
 gpr.user=battlecodedownloadpackage
 profilerEnabled=false
