--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # modify this file to change project properties
 teamA=team3player
-teamB=examplefuncsplayer
+teamB=oldbot
 maps=maptestsmall
 source=src
 gpr.user=battlecodedownloadpackage
