playtest should report null exceptions now

--- a/.github/workflows/playtest.yml
+++ b/.github/workflows/playtest.yml
@@ -59,3 +59,7 @@ jobs:
       with:
         name: playtest report
         path: build/reports/playtest.txt
+    - name: check for any Null exceptions
+      run: |
+        chmod +x ./.github/workflows/checkfornull
+        ./.github/workflows/checkfornull
